@@ -1,5 +1,5 @@
 #! /usr/bin/env python
-# Last Change: Tue Nov 06 08:00 PM 2007 J
+# Last Change: Tue Nov 06 11:00 PM 2007 J
 
 # Module for custom, common checkers for numpy (and scipy)
 import sys
@@ -87,14 +87,14 @@ def CheckCBLAS(context, autoadd = 1):
                     add_info(env, 'cblas', res)
                 return st
 
-            # Check Sunperf
-            st, res = CheckSunperf(context, autoadd)
-            if st:
-                st = check_include_and_run(context, 'CBLAS (Sunperf)', res.cfgopts,
-                                           [], cblas_src, autoadd)
-                if st:
-                    add_info(env, 'cblas', res)
-                return st
+            # # Check Sunperf
+            # st, res = CheckSunperf(context, autoadd)
+            # if st:
+            #     st = check_include_and_run(context, 'CBLAS (Sunperf)', res.cfgopts,
+            #                                [], cblas_src, autoadd)
+            #     if st:
+            #         add_info(env, 'cblas', res)
+            #     return st
 
             add_info(env, 'cblas', 'Def numpy implementation used')
             return 0
